Signed-off-by: wangjilei <wangjilei007@163.com>

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "lvren007/arraytoexcel",
     "description": "php array to excel/html",
-    "type": "composer-plugin",
+    "type": "php-extension",
     "require": {
     },
     "authors": [
