Signed-off-by: wangjilei <wangjilei007@163.com>

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
     "type": "php-extension",
     "require": {
     },
-    "autoload":{
-      "files":["src/ArrayToExcel.php"]
-    },
+    "classmap": ["src/"],
     "authors": [
         {
             "name": "wangjl",
