Signed-off-by: wangjilei <wangjilei007@163.com>

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "php-extension",
     "require": {
     },
-    "classmap": ["src/"],
+    "autoload":{
+      "files":["src/ArrayToExcel.php"]
+    },
     "authors": [
         {
             "name": "wangjl",
