Signed-off-by: wangjilei <wangjilei007@163.com>

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
     },
     "autoload":{
-      "files":["src/ArrayToExcel.php"]
+      "classmap": ["src/"]
     },
     "authors": [
         {
